optimize http api, add hidden params,after id and add batch insert
